# cyb3ria

./: .gitignore
cyb3ria/sql+log+reg+chat/html/: chat.html  index.html  login.html
cyb3ria/sql+log+reg+chat/nginx/: cyb3ria.xyz
cyb3ria/sql+log+reg+chat/rust/: Cargo.toml
cyb3ria/sql+log+reg+chat/rust/src/: main.rs
cyb3ria/websocket+chat+morefiles1/nginx/: rust_server_cyb3ria_xyz
cyb3ria/websocket+chat+morefiles1/rust_server_cyb3ria_xyz/: Cargo.toml
cyb3ria/websocket+chat+morefiles1/rust_server_cyb3ria_xyz/src/: db.rs  handlers.rs  main.rs
cyb3ria/websocket+chat+morefiles1/static/: chat.html  dashboard.html  index.html  register.html  upload.html
cyb3ria/websocket+chat+morefiles1/static/css/: styles.css
cyb3ria/websocket+chat+morefiles1/static/js/: scripts.js
cyb3ria0.1.2/rust_server_cyb3ria_xyz/: Cargo.toml
cyb3ria0.1.2/rust_server_cyb3ria_xyz/src/: db.rs  handlers.rs  main.rs  models.rs
cyb3ria0.1.2/static/: login.html  register.html
cyb3ria0.2.0/nginx/: nginx.conf  rust_server_cyb3ria_xyz
cyb3ria0.2.0/rust_server_cyb3ria_xyz/: Cargo.toml
cyb3ria0.2.0/rust_server_cyb3ria_xyz/src/: db.rs  handlers.rs  main.rs  utils.rs
cyb3ria0.2.0/rust_server_cyb3ria_xyz/src/handlers/: auth.rs
cyb3ria0.2.0/static/: login.html  register.html
cyb3ria0.2.0/static/js/: scripts.js  utils.js
