[package]
name = "rust_server_cyb3ria_xyz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.14"