[package]
name = "rust_server_cyb3ria_xyz"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
bcrypt = "0.10"
